--- a/components/Botton/index.module.css
+++ b/components/Botton/index.module.css
@@ -1,27 +1,17 @@
-.playerContainer {
-    @apply relative overflow-hidden mb-5 h-full;
-  }
-  
-  .active {
-    @apply rounded-lg;
-  }
-  
-  .notActive {
-    @apply rounded-md h-min;
-    width: 200px;
-    -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.75);
-  }
-  
+.bottomMenu {
+  @apply absolute flex justify-between bottom-5 left-0 right-0 mx-auto;
+  width: 300px;
+
   .icon {
-    @apply text-white absolute right-2 bottom-2;
+    @apply p-4 rounded-full text-white cursor-pointer;
+    background-color: theme("colors.secondary");
+
+    
   }
-  
-  .user {
-    @apply text-white;
-  }
-  
-  .notPlaying {
-    @apply flex items-center justify-center;
-  }
+  .bottom:hover{
+      background-color: theme("colors.buttonPrimary");
+    }
+    .active {
+      background-color: theme("colors.buttonPrimary");
+    } ;
+}
